<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="rad">RAD</string>
    <string name="u232b">⌫</string>
    <string name="eq">=</string>
    <string name="_0">0</string>
    <string name="com">,</string>
    <string name="u00f7">÷</string>
    <string name="u2715">✕</string>
    <string name="mns">-</string>
    <string name="pls">+</string>
</resources>