<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:paddingStart="10dp"
        android:text="@string/rad"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/math_operation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ellipsize="start"
        android:gravity="end"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/math_operation"
        app:layout_constraintBottom_toTopOf="@id/guideline10"/>

    <Button
        android:id="@+id/btn_7"
        style="@style/NumberButton2"

        android:text="@string/_7"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintBottom_toTopOf="@id/guideline20"/>

    <Button
        android:id="@+id/btn_8"
        style="@style/NumberButton2"

        android:text="@string/_8"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/btn_7"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintBottom_toTopOf="@id/guideline20"/>

    <Button
        android:id="@+id/btn_9"
        style="@style/NumberButton2"

        android:text="@string/_9"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/btn_8"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintBottom_toTopOf="@id/guideline20"/>

    <Button
        android:id="@+id/btn_4"
        style="@style/NumberButton2"

        android:text="@string/_4"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline20"
        app:layout_constraintBottom_toTopOf="@id/guideline30"/>

    <Button
        android:id="@+id/btn_5"
        style="@style/NumberButton2"

        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/btn_4"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline20"
        app:layout_constraintBottom_toTopOf="@id/guideline30"/>

    <Button
        android:id="@+id/btn_6"
        style="@style/NumberButton2"

        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:text="@string/_6"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/btn_5"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/guideline20"
        app:layout_constraintBottom_toTopOf="@id/guideline30"/>

    <Button
        android:id="@+id/btn_1"
        style="@style/NumberButton2"

        android:text="@string/_1"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline30"
        app:layout_constraintBottom_toTopOf="@id/guideline40"/>

    <Button
        android:id="@+id/btn_2"
        style="@style/NumberButton2"

        android:text="@string/_2"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/btn_1"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline30"
        app:layout_constraintBottom_toTopOf="@id/guideline40"/>

    <Button
        android:id="@+id/btn_3"
        style="@style/NumberButton2"

        android:text="@string/_3"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/btn_2"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/guideline30"
        app:layout_constraintBottom_toTopOf="@id/guideline40"/>

    <Button
        android:id="@+id/btn_0"
        style="@style/NumberButton2"

        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline40"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_com"
        style="@style/NumberButton2"

        android:text="@string/com"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/btn_0"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guideline40"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_eq"
        style="@style/NumberButton2"

        android:text="@string/eq"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toEndOf="@+id/btn_com"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/guideline40"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <Button
        android:id="@+id/btn_mns"
        style="@style/ActionButton2"
        android:layout_marginTop="4dp"
        android:text="@string/mns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/guideline400"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/btn_back"
        style="@style/ActionButton2"
        android:text="@string/u232b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:layout_constraintBottom_toTopOf="@id/guideline100"/>

    <Button
        android:id="@+id/btn_div"
        style="@style/ActionButton2"
        android:text="@string/u00f7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/guideline100"
        app:layout_constraintBottom_toTopOf="@id/guideline200"/>

    <Button
        android:id="@+id/btn_mlp"
        style="@style/ActionButton2"
        android:text="@string/u2715"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/guideline200"
        app:layout_constraintBottom_toTopOf="@id/guideline300"/>

    <Button
        android:id="@+id/btn_pls"
        style="@style/ActionButton2"
        android:text="@string/pls"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/guideline300"
        app:layout_constraintBottom_toTopOf="@id/guideline400"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintGuide_percent="0.46" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintGuide_percent="0.64" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline40"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintGuide_percent="0.82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline100"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/guideline3"
        app:layout_constraintGuide_percent="0.424" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline200"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/guideline3"
        app:layout_constraintGuide_percent="0.568" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline300"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/guideline3"
        app:layout_constraintGuide_percent="0.712" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline400"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/guideline3"
        app:layout_constraintGuide_percent="0.856" />


</androidx.constraintlayout.widget.ConstraintLayout>
